# django-dynamic-breadcrumbs

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: django.yml  python-publish-dist.yml  python-publish-test-pypi.yml  python-publish.yml
breadcrumbing/: apps.py  context_processors.py
breadcrumbing/templates/breadcrumbing/: breadcrumbs.html
docs/: conf.py  index.rst
docs/dev/: tests.rst
docs/guide/: install.rst  usage.rst
docs/ref/: settings.rst
dynamic_breadcrumbs/: app_settings.py  apps.py  context_processors.py  utils.py
dynamic_breadcrumbs/templates/dynamic_breadcrumbs/: breadcrumbs.html
example_site/: fixtures.json
example_site/example_site/: settings.py  urls.py
example_site/geography/: admin.py  apps.py  models.py  urls.py  views.py
example_site/geography/migrations/: 0001_initial.py
example_site/geography/templates/: base.html
example_site/geography/templates/geography/: city_detail.html  continent_detail.html  continent_list.html  country_detail.html
requirements/: dev.txt  test.txt
tests/: models.py  settings.py  tests.py  urls.py  views.py
