[metadata]
name = django-dynamic-breadcrumbs
version = 0.0.1
description = A Django app to generate HTML breadcrumbs dynamically from URL path
long_description = file: README.me
description-file = README.md
long-description-content-type = text/markdown
url=https://github.com/marcanuy/django-dynamic-breadcrumbs
author = Marcelo Canina
author_email = me@marcanuy.com
project_urls =
    Source = https://github.com/marcanuy/django-dynamic-breadcrumbs
    Bug Reports = https://github.com/marcanuy/django-dynamic-breadcrumbs/issues
license = MIT
keywords =
    django, breadcrumbs
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
